--- a/index.html
+++ b/index.html
@@ -15,81 +15,43 @@
 
 <body>
 
-    <div class="container">
-        <div class="row-cols-3 ">
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+    <div class="container py-5">
+        <h1 class="text-center text-uppercase fs-5">Our Team</h1>
+        <div class="col-6 d-flex align-items-center mx-auto ">
+            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in varius ante. Sed
+                quis luctus eros.
+                Phasellus rutrum laoreet leo in consequat</p>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 my-4">
+                <div class="card border-0 my-card">
                 </div>
             </div>
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-12 col-md-6 col-lg-4 my-4">
+                <div class="card border-0 my-card">
+
                 </div>
             </div>
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-12 col-md-6 col-lg-4 my-4">
+                <div class="card border-0 my-card">
+
                 </div>
             </div>
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-12 col-md-6 col-lg-4 my-4">
+                <div class="card border-0 my-card">
+
                 </div>
             </div>
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div class="col-12 col-md-6 col-lg-4 my-4">
+                <div class="card border-0 my-card">
+
                 </div>
             </div>
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">An item</li>
-                            <li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li>
-                        </ul>
-                    </div>
+            <div class="col-12 col-md-6 col-lg-4 my-4">
+                <div class="card border-0 my-card">
                 </div>
             </div>
         </div>
-
-    </div>
-    </div>
-
-    <div id="list">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
