--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,17 +20,21 @@
 <body>
 
     <div class="container py-5">
-        <h1 class="text-center text-uppercase fs-5">Our Team</h1>
+        <h1 class="text-center text-uppercase fs-6 fw-bold ">Our Team</h1>
         <div class="col-6 d-flex align-items-center mx-auto ">
-            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in varius ante. Sed
+            <p class="text-center my-text-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+                in varius ante. Sed
                 quis luctus eros.
                 Phasellus rutrum laoreet leo in consequat</p>
         </div>
         <div class="row">
+            <!-- single col and card -->
             <div class="col-12 col-md-6 col-lg-4 my-4">
                 <div class="card border-0 my-card">
+
                 </div>
             </div>
+            <!-- end single col and card -->
             <div class="col-12 col-md-6 col-lg-4 my-4">
                 <div class="card border-0 my-card">
 
